# EnerOS

./: .commitlintrc.yml  .gdbinit  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EnerOS_项目白皮书.docx  Makefile  README.md  README_en.md  README_zh.md  ROADMAP.md  clippy.toml  deny.toml  eneros.toml  rust-toolchain.toml  rustfmt.toml
benches/: Cargo.toml  baseline.json
benches/benches/: agent_bench.rs  api_bench.rs  ha_bench.rs  powerflow_bench.rs  scada_bench.rs
benches/src/: lib.rs
crates/eneros-agent/: Cargo.toml
crates/eneros-agent/benches/: agent_benchmark.rs
crates/eneros-agent/bins/trading-agent/: Cargo.toml
crates/eneros-agent/src/: action_mapping.rs  agent.rs  audit.rs  collaboration.rs  conflict_resolver.rs  context.rs  controller.rs  data_driven_loop.rs  dispatcher.rs  emergency.rs  event_adapter.rs  lib.rs  lifecycle.rs  message.rs  orchestrator.rs  planning.rs  process.rs  reflection.rs  registry.rs  spawn.rs  system_state.rs  topology_scheduler.rs
crates/eneros-agent/tests/: authority_source_integration.rs  decision_loop_integration.rs  dispatch_structured_integration.rs  e2e_domain.rs
crates/eneros-analysis/: Cargo.toml
crates/eneros-analysis/src/: ac_opf.rs  bad_data.rs  lib.rs  observability.rs  opf.rs  planning.rs  short_circuit.rs  state_estimation.rs  transient_stability.rs  types.rs
crates/eneros-api/: Cargo.toml
crates/eneros-api/src/: app.rs  audit.rs  auth.rs  client.rs  config_reload.rs  lib.rs  main.rs  middleware.rs  openapi.rs  otel.rs  server.rs  types.rs
crates/eneros-api/tests/: e2e_agent_control.rs  e2e_integration.rs  e2e_sse.rs  e2e_t029_09_api_completion.rs  e2e_v04_wiring.rs  e2e_v08_analysis.rs  http_pipeline_integration.rs
crates/eneros-bridge/: Cargo.toml
crates/eneros-bridge/python/: bridge_http_server.py  bridge_server.py  requirements.txt
crates/eneros-bridge/src/: bridge_client.rs  equipment_bridge.rs  lib.rs  pandapower_types.rs  python_bridge.rs  topology_types.rs
crates/eneros-bridge/tests/: bridge_e2e.rs
crates/eneros-constraint/: Cargo.toml
crates/eneros-constraint/src/: compliance.rs  engine.rs  lib.rs  projector.rs  rules.rs  validation_rules.rs  violation.rs
crates/eneros-core/: Cargo.toml
crates/eneros-core/src/: agent_message.rs  agentos_types.rs  command.rs  config.rs  error.rs  event.rs  event_bus_client.rs  execution.rs  gateway_client.rs  lib.rs  linalg.rs  matrix.rs  pipeline_types.rs  types.rs
crates/eneros-device/: Cargo.toml
crates/eneros-device/src/: adapter.rs  discovery.rs  health.rs  lib.rs  manager.rs  mock_adapter.rs  protocol.rs  redundancy.rs  timestamp.rs
crates/eneros-equipment/: Cargo.toml
crates/eneros-equipment/src/: lib.rs  library.rs  models.rs  traits.rs
crates/eneros-eventbus/: Cargo.toml
crates/eneros-eventbus/src/: broker.rs  bus.rs  client.rs  event.rs  handler.rs  lib.rs  priority_bus.rs  publisher.rs
crates/eneros-gateway/: Cargo.toml
crates/eneros-gateway/benches/: gateway_benchmark.rs
crates/eneros-gateway/src/: client.rs  command.rs  constraint_validator.rs  decision_cache.rs  decision_pipeline.rs  decomposer.rs  executor.rs  gateway.rs  interlocking.rs  lib.rs  pipeline_types.rs  postcondition.rs  precondition.rs  priority_queue.rs  rt_executor.rs  safety.rs  server.rs  watchdog.rs
crates/eneros-gateway/tests/: decision_pipeline_verification.rs  e2e_agentos.rs  gateway_client.rs  rt_benchmark.rs
crates/eneros-memory/: Cargo.toml
crates/eneros-memory/src/: file_memory.rs  lib.rs  memory.rs  types.rs  vector.rs
crates/eneros-network/: Cargo.toml
crates/eneros-network/src/: cim.rs  lib.rs  network.rs  pipeline.rs  simulator.rs
crates/eneros-network/tests/: e2e_pipeline.rs  e2e_postcondition_real.rs  simulator_verification.rs
crates/eneros-os/: Cargo.toml
crates/eneros-os/src/: lib.rs
crates/eneros-os/tests/: init_test.rs
crates/eneros-plugin/: Cargo.toml
crates/eneros-plugin-macros/: Cargo.toml
crates/eneros-plugin-macros/src/: lib.rs
crates/eneros-plugin-macros/tests/: integration.rs
crates/eneros-plugin/src/: agent.rs  analysis.rs  config.rs  dependency.rs  error.rs  ipc.rs  lib.rs  lifecycle.rs  loader.rs  manifest.rs  market.rs  plugin.rs  protocol.rs  registry.rs  sandbox.rs  signature.rs  version.rs
crates/eneros-powerflow/: Cargo.toml
crates/eneros-powerflow/src/: bfsw_solver.rs  ieee.rs  lib.rs  matrix.rs  result.rs  solver.rs
crates/eneros-reasoning/: Cargo.toml
crates/eneros-reasoning/src/: context.rs  engine.rs  feedback.rs  lib.rs  llm_engine.rs  llm_prompt.rs  rig_engine.rs  rig_tools.rs  strategy.rs  structured_output.rs
crates/eneros-runtime/: Cargo.toml
crates/eneros-runtime/src/: lib.rs  runtime.rs
crates/eneros-scada/: Cargo.toml
crates/eneros-scada/benches/: scada_benchmark.rs
crates/eneros-scada/src/: collector.rs  config.rs  dual_scan.rs  ieee14.rs  lib.rs  pipeline.rs  pool.rs  simulated.rs  snapshot.rs
crates/eneros-scada/tests/: iec104_integration.rs  iec104_tcp_transport.rs
crates/eneros-sdk/: Cargo.toml
crates/eneros-sdk/src/: agent.rs  common.rs  lib.rs  plugin.rs  protocol.rs
crates/eneros-simulator/: Cargo.toml
crates/eneros-simulator/src/: device.rs  fault.rs  grid.rs  lib.rs  load.rs  scenario.rs
crates/eneros-test-utils/: Cargo.toml
crates/eneros-test-utils/src/: lib.rs  simulators.rs
crates/eneros-timeseries/: Cargo.toml
crates/eneros-timeseries/src/: aggregation.rs  anomaly.rs  downsample.rs  engine.rs  gorilla.rs  influxdb_backend.rs  interpolation.rs  lib.rs  query.rs  soe.rs  sqlite_storage.rs  storage.rs  tdengine_backend.rs
crates/eneros-tool/: Cargo.toml
crates/eneros-tool/src/: builtin.rs  lib.rs  registry.rs  tool.rs  topology_tool.rs
crates/eneros-topology/: Cargo.toml
crates/eneros-topology/src/: connection_modes.rs  engine.rs  graph.rs  lib.rs  search.rs
os/tests/: Cargo.toml  README.md  boot_params_test.rs  boot_test.rs  boot_test.sh
tests/e2e/: Cargo.toml
tests/e2e/src/: cluster.rs  lib.rs
tests/e2e/tests/: e2e_tests.rs
tests/protocol_conformance/: Cargo.toml
tests/protocol_conformance/src/: lib.rs
(+1607 files in other folders)
