[workspace]
resolver = "2"
members = [
    "crates/kernel/kernel",
    "crates/kernel/mm",
    "crates/kernel/heap",
    "crates/kernel/sched",
    "crates/kernel/smp",
    "crates/kernel/panic",
    "crates/kernel/ipc",
    "crates/kernel/controlbus",
    "crates/hal/hal",
    "crates/hal/board",
    "crates/runtime/runtime",
    "crates/runtime/sel4-sys",
    "crates/runtime/hello",
    "crates/runtime/user/heap",
    "crates/drivers/time",
    "crates/drivers/watchdog",
    "crates/drivers/power",
    "crates/drivers/storage",
    "ci",
]

[workspace.package]
version = "0.23.0"
edition = "2021"
authors = ["EnerOS Team"]
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = true
