[workspace]
resolver = "2"
members = [
    "crates/kernel/kernel",
    "crates/kernel/mm",
    "crates/kernel/heap",
    "crates/kernel/sched",
    "crates/kernel/smp",
    "crates/kernel/panic",
    "crates/kernel/ipc",
    "crates/kernel/controlbus",
    "crates/kernel/rtos-control",
    "crates/kernel/rtos-sampling",
    "crates/kernel/rtos-cmd-exec",
    "crates/kernel/rtos-degrade",
    "crates/kernel/rtos-watchdog-degrade",
    "crates/ai/llm-engine",
    "crates/ai/gguf-loader",
    "crates/ai/model-deploy",
    "crates/ai/infer-scheduler",
    "crates/ai/prompt-template",
    "crates/ai/solver-core",
    "crates/ai/solver-model",
    "crates/ai/solver-milp",
    "crates/ai/solver-pareto",
    "crates/ai/solver-warm",
    "crates/ai/energy-lp-model",
    "crates/ai/safety-validator",
    "crates/ai/intent-parser",
    "crates/ai/intent-contract",
    "crates/ai/fast-path",
    "crates/ai/dual-brain",
    "crates/hal/hal",
    "crates/hal/board",
    "crates/runtime/runtime",
    "crates/runtime/sel4-sys",
    "crates/runtime/hello",
    "crates/runtime/user/heap",
    "crates/runtime/config",
    "crates/drivers/time",
    "crates/drivers/watchdog",
    "crates/drivers/power",
    "crates/drivers/storage",
    "crates/drivers/fs",
    "crates/drivers/tsdb",
    "crates/drivers/net",
    "crates/drivers/cellular",
    "crates/drivers/framework",
    "crates/drivers/rs485",
    "crates/drivers/can",
    "crates/protocols/modbus-rtu",
    "crates/protocols/modbus-tcp",
    "crates/protocols/iec104-slave",
    "crates/protocols/iec104-master",
    "crates/protocols/upa-model",
    "crates/protocols/protocol-abstract",
    "crates/protocols/telemetry-model",
    "crates/protocols/soe-engine",
    "crates/protocols/agent-bus-dds",
    "crates/protocols/mqtt",
    "crates/protocols/tsn-time",
    "crates/protocols/iec61850-model",
    "crates/protocols/iec61850-mms",
    "crates/protocols/iec61850-goose",
    "crates/protocols/iec61850-sv",
    "crates/protocols/fault-recorder",
    "crates/drivers/calibration",
    "crates/security/crypto",
    "crates/security/iec62351",
    "crates/security/secure-boot",
    "crates/security/attestation",
    "crates/security/mtls",
    "crates/agents/agent",
    "crates/agents/hmi",
    "crates/agents/alarm",
    "crates/agents/energy-market-agent",
    "crates/agents/device-agent",
    "crates/agents/grid_agent",
    "crates/agents/mvp-scenario",
    "crates/agents/twin-agent",
    "crates/agents/coordinator",
    "crates/agents/cloud-coordinator",
    "crates/agents/cloud-sync",
    "crates/agents/model-ota",
    "crates/agents/federation",
    "ci",
]

[workspace.package]
version = "0.115.0"
edition = "2021"
authors = ["EnerOS Team"]
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = true
