[package]
name = "eneros-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EnerOS API server and client"

[features]
default = []
# Enable rig framework integration for AI reasoning — 透传到 eneros-runtime
rig = ["eneros-runtime/rig"]

[dependencies]
# 中间聚合层 — 聚合 runtime 类子系统 crate（agent/gateway/eventbus/scada/...）
eneros-runtime = { path = "../eneros-runtime" }
# 模型类 crate — 由上层直接依赖（不聚合）
eneros-core = { path = "../eneros-core" }
eneros-topology = { path = "../eneros-topology" }
eneros-powerflow = { path = "../eneros-powerflow" }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
tracing = { workspace = true }
log = "0.4"
chrono = { workspace = true, features = ["serde"] }
parking_lot = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
# OpenTelemetry OTLP 导出 (v0.29.0 — T029-18)
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"
# SSE 流式构造（T029-11 Dashboard SSE 实时刷新）
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json"] }
num-complex = { workspace = true }
ndarray = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
axum-server = { version = "0.7", features = ["tls-rustls"] }
utoipa = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
async-trait = { workspace = true }
rcgen = "0.12"
tempfile = "3"
