[package]
name = "eneros-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bridge between EnerOS (Rust) and cnpower (Python)"

[dependencies]
eneros-core = { path = "../eneros-core" }
eneros-equipment = { path = "../eneros-equipment" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process"] }
tracing = { workspace = true }
parking_lot = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
