[package]
name = "eneros-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EnerOS core types and utilities"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }
