[package]
name = "eneros-device"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EnerOS device access layer for protocol adapters"

[dependencies]
eneros-core = { path = "../eneros-core" }
eneros-eventbus = { path = "../eneros-eventbus" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio-modbus = { version = "0.14", default-features = false, features = ["tcp"] }
rumqttc = "0.24"
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }

# Linux 串口 termios 系统调用（Modbus RTU）与 AF_PACKET（GOOSE/SV Layer 2）
[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
