[package]
name = "eneros-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EnerOS plugin framework core - dynamic plugin loading, signature verification, sandbox"

[dependencies]
eneros-core = { path = "../eneros-core" }
libloading = "0.8"
ed25519-dalek = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
# seccomp BPF 沙箱：仅 Linux + seccomp feature 启用
libseccomp = { workspace = true, optional = true }

[features]
# seccomp 系统调用沙箱：仅 Linux 平台有实际功能，非 Linux 为 stub
seccomp = ["dep:libseccomp"]
# TPM 硬件密钥存储：仅 Linux 平台有实际功能，非 Linux 为 stub
tpm = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
