[package]
name = "eneros-scada"
version.workspace = true
edition.workspace = true

[dependencies]
eneros-core = { path = "../eneros-core" }
eneros-device = { path = "../eneros-device" }
eneros-timeseries = { path = "../eneros-timeseries" }
eneros-eventbus = { path = "../eneros-eventbus" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
parking_lot = { workspace = true }
# T029-14: Modbus 连接池化需要 tokio-modbus（与 eneros-device 保持一致）
tokio-modbus = { version = "0.14", default-features = false, features = ["tcp"] }

[dev-dependencies]
criterion = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt", "rt-multi-thread"] }

[[bench]]
name = "scada_benchmark"
harness = false
