[package]
name = "eneros-timeseries"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EnerOS time-series data engine"

[dependencies]
eneros-core = { path = "../eneros-core" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

rusqlite = { version = "0.31", features = ["bundled"] }
utoipa = { workspace = true, features = ["chrono"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
serde_json = { workspace = true }
